fixing the game screen alignments

--- a/src/main/resources/static/styles/game-styles.css
+++ b/src/main/resources/static/styles/game-styles.css
@@ -33,16 +33,21 @@ a {
 
 .ribbon {
  font-size: 16px !important;
- /* This ribbon is based on a 16px font side and a 24px vertical rhythm. I've used em's to position each element for scalability. If you want to use a different font size you may have to play with the position of the ribbon elements */
+ /* This ribbon is based on a 16px font side and a 24px vertical rhythm.
+  I've used em's to position each element for scalability.
+  If you want to use a different font size you may have to
+  play with the position of the ribbon elements */
 
  width: 50%;
-
  position: relative;
  background: #ba89b6;
  color: #fff;
  text-align: center;
  padding: 1em 2em; /* Adjust to suit */
- margin: 2em auto 3em; /* Based on 24px vertical rhythm. 48px bottom margin - normally 24 but the ribbon 'graphics' take up 24px themselves so we double it. */
+ margin: 2em auto 3em;
+ /* Based on 24px vertical rhythm.
+ 48px bottom margin - normally 24 but the ribbon 'graphics' take up
+ 24px themselves so we double it. */
 }
 .ribbon:before, .ribbon:after {
  content: "";
